[gd_scene load_steps=4 format=3 uid="uid://dd0h5pqfbhabu"]

[ext_resource type="Texture2D" uid="uid://yadgks1tte4r" path="res://Assets/images/backgrounds/door.png" id="1_5xojw"]
[ext_resource type="Script" uid="uid://dff55bvuva10w" path="res://Objects/door.gd" id="2_vkudc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2fpl1"]
size = Vector2(409.333, 752)

[node name="Door" type="Sprite2D"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_5xojw")
script = ExtResource("2_vkudc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2.00001, 4.00001)
shape = SubResource("RectangleShape2D_2fpl1")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
